// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`editorToolbar > renders with as correctly 1`] = `
"<section role="toolbar" data-slot="base" class="">
  <div role="group" data-slot="group" class=""><button type="button" disabled="" id="akar-dropdown-menu-trigger-v-0-0-0" aria-haspopup="menu" aria-expanded="false" data-state="closed" aria-label="Headings" data-slot="base" class=""><span class="iconify i-lucide:heading" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button>
    <!---->
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <div data-orientation="vertical" aria-orientation="vertical" role="separator" data-slot="separator" class=""></div>
  <div role="group" data-slot="group" class=""><button type="button" disabled="" aria-label="Bold" data-slot="base" class=""><span class="iconify i-lucide:bold" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Italic" data-slot="base" class=""><span class="iconify i-lucide:italic" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Underline" data-slot="base" class=""><span class="iconify i-lucide:underline" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Strikethrough" data-slot="base" class=""><span class="iconify i-lucide:strikethrough" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Code" data-slot="base" class=""><span class="iconify i-lucide:code" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</section>"
`;

exports[`editorToolbar > renders with class correctly 1`] = `
"<div role="toolbar" data-slot="base" class="overflow-x-auto">
  <div role="group" data-slot="group" class=""><button type="button" disabled="" id="akar-dropdown-menu-trigger-v-0-0-0" aria-haspopup="menu" aria-expanded="false" data-state="closed" aria-label="Headings" data-slot="base" class=""><span class="iconify i-lucide:heading" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button>
    <!---->
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <div data-orientation="vertical" aria-orientation="vertical" role="separator" data-slot="separator" class=""></div>
  <div role="group" data-slot="group" class=""><button type="button" disabled="" aria-label="Bold" data-slot="base" class=""><span class="iconify i-lucide:bold" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Italic" data-slot="base" class=""><span class="iconify i-lucide:italic" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Underline" data-slot="base" class=""><span class="iconify i-lucide:underline" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Strikethrough" data-slot="base" class=""><span class="iconify i-lucide:strikethrough" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Code" data-slot="base" class=""><span class="iconify i-lucide:code" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`editorToolbar > renders with item slot correctly 1`] = `
"<div role="toolbar" data-slot="base" class="">
  <div role="group" data-slot="group" class="">Item slot</div>
  <div data-orientation="vertical" aria-orientation="vertical" role="separator" data-slot="separator" class=""></div>
  <div role="group" data-slot="group" class="">Item slotItem slotItem slotItem slotItem slot</div>
  <!--v-if-->
</div>"
`;

exports[`editorToolbar > renders with layout bubble correctly 1`] = `
"<div tabindex="-1" style="visibility: hidden; position: absolute;">
  <div role="toolbar" data-slot="base" class="">
    <div role="group" data-slot="group" class=""><button type="button" disabled="" id="akar-dropdown-menu-trigger-v-0-0-0" aria-haspopup="menu" aria-expanded="false" data-state="closed" aria-label="Headings" data-slot="base" class=""><span class="iconify i-lucide:heading" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!---->
      <!--teleport start-->
      <!--teleport end-->
    </div>
    <div data-orientation="vertical" aria-orientation="vertical" role="separator" data-slot="separator" class=""></div>
    <div role="group" data-slot="group" class=""><button type="button" disabled="" aria-label="Bold" data-slot="base" class=""><span class="iconify i-lucide:bold" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Italic" data-slot="base" class=""><span class="iconify i-lucide:italic" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Underline" data-slot="base" class=""><span class="iconify i-lucide:underline" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Strikethrough" data-slot="base" class=""><span class="iconify i-lucide:strikethrough" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Code" data-slot="base" class=""><span class="iconify i-lucide:code" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`editorToolbar > renders with layout floating correctly 1`] = `
"<div tabindex="-1" style="visibility: hidden; position: absolute;">
  <div role="toolbar" data-slot="base" class="">
    <div role="group" data-slot="group" class=""><button type="button" disabled="" id="akar-dropdown-menu-trigger-v-0-0-0" aria-haspopup="menu" aria-expanded="false" data-state="closed" aria-label="Headings" data-slot="base" class=""><span class="iconify i-lucide:heading" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!---->
      <!--teleport start-->
      <!--teleport end-->
    </div>
    <div data-orientation="vertical" aria-orientation="vertical" role="separator" data-slot="separator" class=""></div>
    <div role="group" data-slot="group" class=""><button type="button" disabled="" aria-label="Bold" data-slot="base" class=""><span class="iconify i-lucide:bold" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Italic" data-slot="base" class=""><span class="iconify i-lucide:italic" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Underline" data-slot="base" class=""><span class="iconify i-lucide:underline" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Strikethrough" data-slot="base" class=""><span class="iconify i-lucide:strikethrough" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button><button type="button" disabled="" aria-label="Code" data-slot="base" class=""><span class="iconify i-lucide:code" aria-hidden="true" data-slot="leadingIcon"></span>
        <!--v-if-->
        <!--v-if-->
      </button></div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`editorToolbar > renders with ui correctly 1`] = `
"<div role="toolbar" data-slot="base" class="">
  <div role="group" data-slot="group" class=""><button type="button" disabled="" id="akar-dropdown-menu-trigger-v-0-0-0" aria-haspopup="menu" aria-expanded="false" data-state="closed" aria-label="Headings" data-slot="base" class=""><span class="iconify i-lucide:heading" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button>
    <!---->
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <div data-orientation="vertical" aria-orientation="vertical" role="separator" data-slot="separator" class="bg-default"></div>
  <div role="group" data-slot="group" class=""><button type="button" disabled="" aria-label="Bold" data-slot="base" class=""><span class="iconify i-lucide:bold" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Italic" data-slot="base" class=""><span class="iconify i-lucide:italic" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Underline" data-slot="base" class=""><span class="iconify i-lucide:underline" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Strikethrough" data-slot="base" class=""><span class="iconify i-lucide:strikethrough" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button><button type="button" disabled="" aria-label="Code" data-slot="base" class=""><span class="iconify i-lucide:code" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;
